--- a/Learning-Project/public/css/main.css
+++ b/Learning-Project/public/css/main.css
@@ -99,6 +99,10 @@ footer {
   margin-top: 20px;
 }
 
+.create-pizza fieldset {
+  border: 0;
+}
+
 /* pizza details page */
 
 .pizza-details {
@@ -140,7 +144,8 @@ a.back {
 }
 
 .pizza-index .pizza-item img {
-  width: 60px;
+  height: 5px;
+  width: 5px;
   display: inline-block;
 }
 
